clusters/my-cluster/net/lernapp-externalsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lernapp-externalsvc
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  type: ExternalName
  externalName: learn-app-svc-o1.lern.svc.cluster.local
