clusters/my-cluster/net/longhorn-externalsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-externalsvc
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  type: ExternalName
  externalName: longhorn-frontend.longhorn-system.svc.cluster.local
