clusters/my-cluster/net/pgadmin-externalsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-externalsvc
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  type: ExternalName
  externalName: pgadmin-svc.psql.svc.cluster.local
