clusters/my-cluster/net/svcs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend-ex
spec:
  type: ExternalName
  externalName: longhorn-frontend.longhorn-system.svc.cluster.local
